# CORTIX

./: CMakeLists.txt  New Text Document.txt  epilepsy_ontology.ttl  new.txt
src/core/: cortix_processor.cpp  cortix_processor.hpp  main.cpp
src/neuromorphic/: neuromorphic.cpp  neuromorphic.hpp
src/semantic_engine/: semantic_engine.cpp  semantic_engine.hpp
